--- a/index.html
+++ b/index.html
@@ -90,5 +90,80 @@
         </div>
       </div>
     </section>
+
+    <section class="section-stats">
+      <div class="container">
+        <div class="stats">
+          <div class="stat">Courses</div>
+          <div class="stat">Hours</div>
+          <div class="stat">Customers</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-personalities">
+      <div class="container">
+        <div class="personalities-flex">
+          <div class="personalities-text">
+            <h3 class="personalities-header">Personalites</h3>
+            <p class="personalities-paragraph">
+              Tools which helping me developing myself
+            </p>
+          </div>
+          <div class="personalities-grid">
+            <div class="personality">
+              <ion-icon
+                class="personality-icon"
+                name="accessibility"
+              ></ion-icon>
+              <p class="personality-text">analytical thinking</p>
+            </div>
+            <div class="personality">
+              <ion-icon
+                class="personality-icon"
+                name="accessibility"
+              ></ion-icon>
+              <p class="personality-text">fast learning</p>
+            </div>
+            <div class="personality">
+              <ion-icon
+                class="personality-icon"
+                name="accessibility"
+              ></ion-icon>
+              <p class="personality-text">accuracy</p>
+            </div>
+            <div class="personality">
+              <ion-icon
+                class="personality-icon"
+                name="accessibility"
+              ></ion-icon>
+              <p class="personality-text">communicativeness</p>
+            </div>
+            <div class="personality">
+              <ion-icon
+                class="personality-icon"
+                name="accessibility"
+              ></ion-icon>
+              <p class="personality-text">goal-oriented attitude</p>
+            </div>
+            <div class="personality">
+              <ion-icon
+                class="personality-icon"
+                name="accessibility"
+              ></ion-icon>
+              <p class="personality-text">patience</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
