--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
       <div class="container">
         <div class="hello-box">
           <div class="text-box">
-            <h1 class="hello-header">portfolio Simon Burek page</h1>
+            <h1 class="hello-header">
+              portfolio <span> Simon Burek</span> page
+            </h1>
             <p class="hello-text">Progress is a natural part of our live</p>
+            <a class="btn" href="#">Check my work</a>
           </div>
           <div class="img-box">
             <img
@@ -94,9 +97,37 @@
     <section class="section-stats">
       <div class="container">
         <div class="stats">
-          <div class="stat">Courses</div>
-          <div class="stat">Hours</div>
-          <div class="stat">Customers</div>
+          <div class="stat">
+            <ion-icon class="stat-icon" name="construct-outline"></ion-icon>
+            <h4 class="stat-header">
+              <span class="color-orange">+</span>300 <br />support companies
+            </h4>
+            <p class="stat-text">
+              Building an Implementation Department from scratch and permanent
+              post - implementation service for over 300 companies
+            </p>
+          </div>
+          <div class="stat">
+            <ion-icon class="stat-icon" name="timer-outline"></ion-icon>
+            <h4 class="stat-header">
+              1/15<br />
+              of best partners
+            </h4>
+            <p class="stat-text">
+              One of the top 15 partners of Polskie ePłatności
+            </p>
+          </div>
+          <div class="stat">
+            <ion-icon class="stat-icon" name="bar-chart-outline"></ion-icon>
+            <h4 class="stat-header">
+              <span class="color-orange">+</span>1,600<br />
+              business customers
+            </h4>
+            <p class="stat-text">
+              Creation of a commercial and service branch and providing
+              permanent service
+            </p>
+          </div>
         </div>
       </div>
     </section>
