Personality and About

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="hello-box">
           <div class="text-box">
             <h1 class="hello-header">
-              portfolio <span> Simon Burek</span> page
+              portfolio <br /><span> Simon Burek</span><br />
+              page
             </h1>
             <p class="hello-text">Progress is a natural part of our live</p>
             <a class="btn" href="#">Check my work</a>
@@ -85,10 +86,12 @@
         <div class="about-background">
           <h2 class="about-header">About Me</h2>
           <p class="about-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            voluptatem doloribus numquam quaerat quae. Et reprehenderit
-            assumenda, molestiae eius, labore qui eligendi quod sit ducimus
-            harum quisquam nemo voluptatum rerum.
+            ERP sof tware implementat ion special i s t , managing a branch on
+            the local market. Creat ion of a commercial and ser v i ce branch
+            and prov iding permanent ser v i ce to 1 ,600 bus ines s cus tomer s
+            , Bui lding an Implementat ion Depar tment f rom s c ratch and
+            permanent pos t - implementat ion ser v i ce for over 300 companies
+            , One of the top 1 5 par tner s of Pol skie ePłatnoś ci . . .
           </p>
         </div>
       </div>
@@ -145,42 +148,39 @@
             <div class="personality">
               <ion-icon
                 class="personality-icon"
-                name="accessibility"
+                name="analytics-outline"
               ></ion-icon>
-              <p class="personality-text">analytical thinking</p>
+              <p class="personality-text">Analytical thinking</p>
             </div>
             <div class="personality">
-              <ion-icon
-                class="personality-icon"
-                name="accessibility"
-              ></ion-icon>
+              <ion-icon class="personality-icon" name="speedometer"></ion-icon>
               <p class="personality-text">fast learning</p>
             </div>
             <div class="personality">
               <ion-icon
                 class="personality-icon"
-                name="accessibility"
+                name="flask-outline"
               ></ion-icon>
               <p class="personality-text">accuracy</p>
             </div>
             <div class="personality">
               <ion-icon
                 class="personality-icon"
-                name="accessibility"
+                name="person-add-outline"
               ></ion-icon>
               <p class="personality-text">communicativeness</p>
             </div>
             <div class="personality">
               <ion-icon
                 class="personality-icon"
-                name="accessibility"
+                name="trophy-outline"
               ></ion-icon>
               <p class="personality-text">goal-oriented attitude</p>
             </div>
             <div class="personality">
               <ion-icon
                 class="personality-icon"
-                name="accessibility"
+                name="hourglass-outline"
               ></ion-icon>
               <p class="personality-text">patience</p>
             </div>
