add section Portfolio

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 class="personality-icon"
                 name="person-add-outline"
               ></ion-icon>
-              <p class="personality-text">communicativeness</p>
+              <p class="personality-text">Comminicate skills</p>
             </div>
             <div class="personality">
               <ion-icon
@@ -186,6 +186,39 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="section-portfolio">
+      <div class="container">
+        <div class="portfolio-grid">
+          <h4 class="portfolio-header">Portfolio</h4>
+        <figure class="project project--1">
+         <a href="#" class="project-link"> <img class="project-img" src="Diece.png" alt="Browser game with dices"></a>
+          <p class="project-text">Project description in few words. It is how it works and another stuff</p>
+        </figure>
+        <figure class="project project--main">
+          <a href="#" class="project-link--main">
+            <div class="project-img-box--main">
+            <img class="project-img project-img--main" src="Banking.png" alt="Banking app"></div>
+            <h4 class="project-header--main">Banking App</h4>
+          <p class="project-text--main">Frontend-App with account balances, transfer money, request loan</p></a>
+          <button class="btn-arr btn--left"><ion-icon class="btn-icon" name="chevron-back-outline"></ion-icon></button>
+          <button class="btn-arr btn--right"><ion-icon class="btn-icon" name="chevron-forward-outline"></ion-icon></button>
+        </figure>
+        <figure class="project project--3">
+          <a href="#" class="project-link"><img class="project-img" src="Diece.png" alt="Browser game with dices"></a>
+          <p class="project-text">Project description in few words. It is how it works and another stuff</p>
+          </figure>
+          <figure class="project project--4">
+            <a href="#" class="project-link"><img class="project-img" src="Banking.png" alt="Banking app"></a>
+            <p class="project-text">Project description in few words. It is how it works and another stuff</p>
+          </figure>
+      </div>
+      <div class="btn--cv-box">
+        <ion-icon class="btn--cv-icon left" name="arrow-undo-outline"></ion-icon>
+        <ion-icon class="btn--cv-icon right" name="arrow-undo-outline"></ion-icon>
+        <a class="btn--cv" href="#">Download CV</a>
       </div>
     </section>
     <script
