--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section class="section-nav">
       <img class="logo-nav" src="logo.png" alt="company logo SB with buble" />
       <nav class="links-nav">
-        <a class="link-nav" href="#">Section 1</a>
-        <a class="link-nav" href="#">Section 2</a>
-        <a class="link-nav" href="#">Section 3</a>
-        <a class="link-nav" href="#">Section 4</a>
+        <a class="link-nav" href="#">About Me</a>
+        <a class="link-nav" href="#">Personalites</a>
+        <a class="link-nav" href="#">Portfolio</a>
+        <a class="link-nav" href="#">Contact</a>
         <a class="link-nav" href="#">Download CV</a>
       </nav>
     </section>
@@ -190,7 +190,7 @@
     </section>
 
     <section class="section-portfolio">
-      <div class="container">
+      <div class="container container--portfolio">
         <div class="portfolio-grid">
           <h4 class="portfolio-header">Portfolio</h4>
         <figure class="project project--1">
