Add CV file to download

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="link-nav" href="#">Personalites</a>
         <a class="link-nav" href="#">Portfolio</a>
         <a class="link-nav" href="#">Contact</a>
-        <a class="link-nav" href="#">Download CV</a>
+        <a class="link-nav" href="Simon Burek CV.pdf" download target="_blank">Download CV</a>
       </nav>
     </section>
 
@@ -218,7 +218,7 @@
       <div class="btn--cv-box">
         <ion-icon class="btn--cv-icon left" name="arrow-undo-outline"></ion-icon>
         <ion-icon class="btn--cv-icon right" name="arrow-undo-outline"></ion-icon>
-        <a class="btn--cv" href="#">Download CV</a>
+        <a class="btn--cv" href="Simon Burek CV.pdf" download target="_blank">Download CV</a>
       </div>
     </section>
     <script
