--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="queries.css" />
     <link
@@ -11,17 +12,18 @@
       rel="stylesheet"
     />
 
-    <title>Simon Burek Portfolio</title>
+    <title>Simon Burek Portfolio Page</title>
   </head>
   <body>
     <section class="section-nav">
       <img class="logo-nav" src="logo.png" alt="company logo SB with buble" />
       <nav class="links-nav">
-        <a class="link-nav" href="#">About Me</a>
-        <a class="link-nav" href="#">Personalites</a>
-        <a class="link-nav" href="#">Portfolio</a>
-        <a class="link-nav" href="#">Contact</a>
-        <a class="link-nav" href="Simon Burek CV.pdf" download target="_blank">Download CV</a>
+        <a class="link-nav" href="#about">About Me</a>
+        <a class="link-nav" href="#personal">Personalites</a>
+        <a class="link-nav" href="#portfolio">Portfolio</a>
+        <a class="link-nav" href="Simon Burek CV.pdf" download target="_blank"
+          >Download CV</a
+        >
       </nav>
     </section>
 
@@ -34,7 +36,7 @@
               page
             </h1>
             <p class="hello-text">Progress is a natural part of our live</p>
-            <a class="btn" href="#">Check my work</a>
+            <a class="btn" href="#portfolio">Check my work</a>
           </div>
           <div class="img-box">
             <img
@@ -47,19 +49,17 @@
       </div>
     </section>
 
-
-
-    <section class="section-about">
+    <section class="section-about" id="about">
       <div class="container">
         <div class="about-background">
           <h2 class="about-header">About Me</h2>
           <p class="about-text">
-            ERP sof tware implementat ion special i s t , managing a branch on
-            the local market. Creat ion of a commercial and ser v i ce branch
-            and prov iding permanent ser v i ce to 1 ,600 bus ines s cus tomer s
-            , Bui lding an Implementat ion Depar tment f rom s c ratch and
-            permanent pos t - implementat ion ser v i ce for over 300 companies
-            , One of the top 1 5 par tner s of Pol skie ePłatnoś ci . . .
+            ERP software implementation specialist, managing a branch on the
+            local market. Creation of a commercial and service branch and
+            providing permanent service to 1,600 business customers, Building an
+            Implementation Department from scratch and permanent
+            post-implementation service for over 300 companies, One of the top
+            15 partners of Polskie ePłatności ...
           </p>
         </div>
       </div>
@@ -103,7 +103,7 @@
       </div>
     </section>
 
-    <section class="section-personalities">
+    <section class="section-personalities" id="personal">
       <div class="container">
         <div class="personalities-flex">
           <div class="personalities-text">
@@ -157,36 +157,84 @@
       </div>
     </section>
 
-    <section class="section-portfolio">
+    <section class="section-portfolio" id="portfolio">
       <div class="container container--portfolio">
         <div class="portfolio-grid">
           <h4 class="portfolio-header">Portfolio</h4>
-        <figure class="project project--1">
-         <a href="#" class="project-link"> <img class="project-img" src="Diece.png" alt="Browser game with dices"></a>
-          <p class="project-text">Project description in few words. It is how it works and another stuff</p>
-        </figure>
-        <figure class="project project--main">
-          <a href="#" class="project-link--main">
-            <div class="project-img-box--main">
-            <img class="project-img project-img--main" src="Banking.png" alt="Banking app"></div>
-            <h4 class="project-header--main">Banking App</h4>
-          <p class="project-text--main">Frontend-App with account balances, transfer money, request loan</p></a>
-          <button class="btn-arr btn--left"><ion-icon class="btn-icon" name="chevron-back-outline"></ion-icon></button>
-          <button class="btn-arr btn--right"><ion-icon class="btn-icon" name="chevron-forward-outline"></ion-icon></button>
-        </figure>
-        <figure class="project project--3">
-          <a href="#" class="project-link"><img class="project-img" src="Diece.png" alt="Browser game with dices"></a>
-          <p class="project-text">Project description in few words. It is how it works and another stuff</p>
+          <figure class="project project--1">
+            <a
+              href="https://diece-game-simobur.netlify.app"
+              target="_blank"
+              class="project-link"
+            >
+              <img
+                class="project-img"
+                src="Diece.png"
+                alt="Browser game with dices"
+              />
+              <p class="project-text">
+                Project description in few words. It is how it works and another
+                stuff
+              </p></a
+            >
+          </figure>
+          <figure class="project project--main">
+            <a
+              href="https://banking-by-simobur.netlify.app"
+              target="_blank"
+              class="project-link--main"
+            >
+              <div class="project-img-box--main">
+                <img
+                  class="project-img project-img--main"
+                  src="Banking.png"
+                  alt="Banking app"
+                />
+              </div>
+              <h4 class="project-header--main">Banking App</h4>
+              <p class="project-text--main">
+                Frontend-App with account balances, transfer money, request loan
+              </p></a
+            >
+            <button class="btn-arr btn--left">
+              <ion-icon class="btn-icon" name="chevron-back-outline"></ion-icon>
+            </button>
+            <button class="btn-arr btn--right">
+              <ion-icon
+                class="btn-icon"
+                name="chevron-forward-outline"
+              ></ion-icon>
+            </button>
+          </figure>
+          <figure class="project project--3">
+            <a
+              href="https://omnifood-delivered.netlify.app"
+              target="_blank"
+              class="project-link"
+              ><img
+                class="project-img"
+                src="Omnifood.png"
+                alt="Browser game with dices"
+              />
+              <p class="project-text">
+                Project description in few words. It is how it works and another
+                stuff
+              </p></a
+            >
           </figure>
           <figure class="project project--4">
-            <a href="#" class="project-link"><img class="project-img" src="Banking.png" alt="Banking app"></a>
-            <p class="project-text">Project description in few words. It is how it works and another stuff</p>
+            <a
+              href="https://banking-by-simobur.netlify.app"
+              target="_blank"
+              class="project-link"
+              ><img class="project-img" src="Banking.png" alt="Banking app" />
+              <p class="project-text">
+                Project description in few words. It is how it works and another
+                stuff
+              </p></a
+            >
           </figure>
-      </div>
-      <div class="btn--cv-box">
-        <ion-icon class="btn--cv-icon left" name="arrow-undo-outline"></ion-icon>
-        <ion-icon class="btn--cv-icon right" name="arrow-undo-outline"></ion-icon>
-        <a class="btn--cv" href="Simon Burek CV.pdf" download target="_blank">Download CV</a>
+        </div>
       </div>
     </section>
 
@@ -223,6 +271,17 @@
         </div>
       </div>
     </section>
+
+    <section class="section-cv">
+      <div class="container">
+        <div class="btn--cv-box">
+          <a class="btn--cv" href="Simon Burek CV.pdf" download target="_blank"
+            >Download CV</a
+          >
+        </div>
+      </div>
+    </section>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
