--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           >Download CV</a
         >
       </nav>
+      <nav class="btn-nav">
+        <ion-icon class="btn-nav-icon" name="menu-outline"></ion-icon>
+      </nav>
     </section>
 
     <section class="section-hello">
