add slider to main project, improve queries

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 class="personality-icon"
                 name="person-add-outline"
               ></ion-icon>
-              <p class="personality-text">Comminicate skills</p>
+              <p class="personality-text">communication skills</p>
             </div>
             <div class="personality">
               <ion-icon
@@ -201,23 +201,68 @@
             >
           </figure>
           <figure class="project project--main">
-            <a
-              href="https://banking-by-simobur.netlify.app"
-              target="_blank"
-              class="project-link--main"
-            >
-              <div class="project-img-box--main">
-                <img
-                  class="project-img project-img--main"
-                  src="Banking.png"
-                  alt="Banking app"
-                />
+            <div class="projects--main">
+              <div class="slide project--main--1">
+                <a
+                  href="https://banking-by-simobur.netlify.app"
+                  target="_blank"
+                  class="project-link--main"
+                >
+                  <div class="project-img-box--main">
+                    <img
+                      class="project-img project-img--main"
+                      src="Banking.png"
+                      alt="Banking app"
+                    />
+                  </div>
+                  <h4 class="project-header--main">Banking App</h4>
+                  <p class="project-text--main">
+                    Frontend-App with account balances, transfer money, request
+                    loan
+                  </p></a
+                >
               </div>
-              <h4 class="project-header--main">Banking App</h4>
-              <p class="project-text--main">
-                Frontend-App with account balances, transfer money, request loan
-              </p></a
-            >
+              <div class="slide project--main--2">
+                <a
+                  href="https://banking-by-simobur.netlify.app"
+                  target="_blank"
+                  class="project-link--main"
+                >
+                  <div class="project-img-box--main">
+                    <img
+                      class="project-img project-img--main"
+                      src="Banking.png"
+                      alt="Banking app"
+                    />
+                  </div>
+                  <h4 class="project-header--main">Banking App</h4>
+                  <p class="project-text--main">
+                    Frontend-App with account balances, transfer money, request
+                    loan
+                  </p></a
+                >
+              </div>
+              <div class="slide project--main--3">
+                <a
+                  href="https://banking-by-simobur.netlify.app"
+                  target="_blank"
+                  class="project-link--main"
+                >
+                  <div class="project-img-box--main">
+                    <img
+                      class="project-img project-img--main"
+                      src="Banking.png"
+                      alt="Banking app"
+                    />
+                  </div>
+                  <h4 class="project-header--main">Banking App</h4>
+                  <p class="project-text--main">
+                    Frontend-App with account balances, transfer money, request
+                    loan
+                  </p></a
+                >
+              </div>
+            </div>
             <button class="btn-arr btn--left">
               <ion-icon class="btn-icon" name="chevron-back-outline"></ion-icon>
             </button>
