--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                   <div class="project-img-box--main">
                     <img
                       class="project-img project-img--main"
-                      src="Banking.png"
-                      alt="Banking app"
+                      src="Omnifood.png"
+                      alt="Omnifood"
                     />
                   </div>
                   <h4 class="project-header--main">Banking App</h4>
@@ -251,8 +251,8 @@
                   <div class="project-img-box--main">
                     <img
                       class="project-img project-img--main"
-                      src="Banking.png"
-                      alt="Banking app"
+                      src="Diece.png"
+                      alt="Diece app"
                     />
                   </div>
                   <h4 class="project-header--main">Banking App</h4>
