paddings to nav

--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
                 alt="Browser game with dices"
               />
               <p class="project-text">
-                Project description in few words. It is how it works and another
-                stuff
+                Roll a diece, keep your roll and WIN!
               </p></a
             >
           </figure>
@@ -217,14 +216,14 @@
                   </div>
                   <h4 class="project-header--main">Banking App</h4>
                   <p class="project-text--main">
-                    Frontend-App with account balances, transfer money, request
-                    loan
+                    JavaScript for login account balances, transfer money,
+                    request loan
                   </p></a
                 >
               </div>
               <div class="slide project--main--2">
                 <a
-                  href="https://banking-by-simobur.netlify.app"
+                  href="https://omnifood-delivered.netlify.app"
                   target="_blank"
                   class="project-link--main"
                 >
@@ -235,16 +234,16 @@
                       alt="Omnifood"
                     />
                   </div>
-                  <h4 class="project-header--main">Banking App</h4>
+                  <h4 class="project-header--main">OmniFood</h4>
                   <p class="project-text--main">
-                    Frontend-App with account balances, transfer money, request
-                    loan
+                    HTML and CSS with some JS Script for mobile Menu and sticky
+                    nav
                   </p></a
                 >
               </div>
               <div class="slide project--main--3">
                 <a
-                  href="https://banking-by-simobur.netlify.app"
+                  href="https://diece-game-simobur.netlify.app"
                   target="_blank"
                   class="project-link--main"
                 >
@@ -255,10 +254,10 @@
                       alt="Diece app"
                     />
                   </div>
-                  <h4 class="project-header--main">Banking App</h4>
+                  <h4 class="project-header--main">Diece Game</h4>
                   <p class="project-text--main">
-                    Frontend-App with account balances, transfer money, request
-                    loan
+                    JavaScript for counting a score, displaying dice, switching
+                    player
                   </p></a
                 >
               </div>
