add more projects

--- a/index.html
+++ b/index.html
@@ -261,6 +261,66 @@
                   </p></a
                 >
               </div>
+              <div class="slide project--main--4">
+                <a
+                  href="https://simobur-mapapp.netlify.app/"
+                  target="_blank"
+                  class="project-link--main"
+                >
+                  <div class="project-img-box--main">
+                    <img
+                      class="project-img project-img--main"
+                      src="MapApp.png"
+                      alt="Map with some marks"
+                    />
+                  </div>
+                  <h4 class="project-header--main">MapApp</h4>
+                  <p class="project-text--main">
+                    JavaScript with Leaflet library, save markups on local
+                    storage
+                  </p></a
+                >
+              </div>
+              <div class="slide project--main--5">
+                <a
+                  href="https://simobur-recipe-app.netlify.app/"
+                  target="_blank"
+                  class="project-link--main"
+                >
+                  <div class="project-img-box--main">
+                    <img
+                      class="project-img project-img--main"
+                      src="RecipeApp.png"
+                      alt="List of food recipes"
+                    />
+                  </div>
+                  <h4 class="project-header--main">RecipeApp</h4>
+                  <p class="project-text--main">
+                    JavaScript, API, Async functions, local storage, module
+                    working. Summary project from JS Course
+                  </p></a
+                >
+              </div>
+              <div class="slide project--main--6">
+                <a
+                  href="https://bank-site-simobur.netlify.app/"
+                  target="_blank"
+                  class="project-link--main"
+                >
+                  <div class="project-img-box--main">
+                    <img
+                      class="project-img project-img--main"
+                      src="BankSite.png"
+                      alt="Bank site with some heading"
+                    />
+                  </div>
+                  <h4 class="project-header--main">BankSite</h4>
+                  <p class="project-text--main">
+                    JavaScript with lazy loading, smooth scrooling and flowing
+                    button
+                  </p></a
+                >
+              </div>
             </div>
             <button class="btn-arr btn--left">
               <ion-icon class="btn-icon" name="chevron-back-outline"></ion-icon>
@@ -280,11 +340,10 @@
               ><img
                 class="project-img"
                 src="Omnifood.png"
-                alt="Browser game with dices"
+                alt="Image with gallery with meals"
               />
               <p class="project-text">
-                Project description in few words. It is how it works and another
-                stuff
+                HTML and CSS with some JS Script for mobile Menu and sticky nav
               </p></a
             >
           </figure>
@@ -293,10 +352,14 @@
               href="https://banking-by-simobur.netlify.app"
               target="_blank"
               class="project-link"
-              ><img class="project-img" src="Banking.png" alt="Banking app" />
+              ><img
+                class="project-img"
+                src="Banking.png"
+                alt="List of withdrawals in Bank App"
+              />
               <p class="project-text">
-                Project description in few words. It is how it works and another
-                stuff
+                JavaScript for login account balances, transfer money, request
+                loan
               </p></a
             >
           </figure>
